--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@ body {font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 		background-size: cover;
 		z-index: -1;
 		margin-bottom: 75px;
+		overflow: auto;
 }
 
 html{position: relative;
@@ -22,11 +23,7 @@ li{float: left;
 	text-decoration: none;
 	color: #777777;
 	background-color: #FFFFFF;
-	background-size: 50em 50em;
-	display: inline-block;
-}
-
-li:hover{background-color: #fbfaf8;
+	display: inline;
 }
 
 
@@ -39,17 +36,22 @@ h1{color: #ffffff;
 	width: 400px;
 	line-height: 200%;
 	padding: 50px;
-	border-right: 60em #ffffff;
+	margin-right: 0;
 	display: inline-block;
 }
 
 
 h2{color: #4aaaa5;
+	padding-left: 10px;
 	text-align: left;
 }
 
 
 h3{color:#4aaaa5;
+	border-bottom: 1px solid #777777;
+}
+
+header li{display: inline;
 }
 
 
@@ -69,34 +71,72 @@ aside{float: left;
 		display: inline-block;
 }
 
-#navbar a {float: left;
-		display: block;
-		text-decoration: none;
-}
 
-#navbar{overflow: hidden;
-		background-color: #ffffff;
-}
 
-.main{float: left;
-		width: 650px;
-		height: 650px;
+.main-index{width: 570px;
+		float: left;
 		padding: 10px;
 		color: #777777;
 		background-color: #ffffff;
+		border: 2px solid #dddddd;
+		margin-left: 40px;
+		margin-right: 20px;
+		margin-top: 20px;
+		margin-bottom: 20px;
+}
+
+.main-contact{width: 570px;
+		height: 595px;
+		float: left;
+		padding: 10px;
+		color: #777777;
+		background-color: #ffffff;
+		border: 2px solid #dddddd;
+		margin-left: 40px;
+		margin-right: 20px;
+		margin-top: 20px;
+		margin-bottom: 20px;
+		overflow: auto;
+}
+
+.main-portfolio{width: 570px;
+		float: left;
+		padding: 10px;
+		color: #777777;
+		background-color: #ffffff;
+		border: 2px solid #dddddd;
+		margin-left: 40px;
+		margin-right: 20px;
+		margin-top: 20px;
+		margin-bottom: 20px;
+}
+
+
+#portfolioimg{width: 170px;
+			height: 130px;
+			margin: 0;
+			padding: 0;
+			border: 20px solid #ffffff;
+			float: left;
+			display: inline-block;
 }
 
 
 .links{float: left;
-		width: 250px;
 		background-color: #ffffff;
 		border: 2px solid #dddddd;
 		border-padding: 20px;
-		border-margin: 25px;
-
+		border-margin: 20px;
+		margin-left: 20px;
+		margin-top: 20px;
+		margin-bottom: 80px;
+		display: inline-block;
+		width: 250px;
+		align-items: center;
 }
 
 #me{float: left;
+	padding: 10px;
 }
 
 #button{color: #FFFFFF;
@@ -107,18 +147,14 @@ aside{float: left;
 		padding: 10px;
 }
 
-#button:active{background-color: #e4f0f5;
-}
-#button:hover{background-color: #009d7c;
-}
-
 #footer{background-color: #666666;
 		padding-top: 15px;
 		text-align: center;
-		position: absolute;
+		position: relative;
 		bottom: 0;
 		width: 100%;
 		height: 70px;
-		border-top: 5px solid #4aaaa5;
+		border-top: 2px solid #4aaaa5;
 		clear: left;
+		margin-top: 60px;
 }
