--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,20 +14,16 @@ body, html{padding: 0;
 		margin: 0;
 }
 
-ul {list-style-type: none;
-	display: inline-block;
-	color: #777777;
-}
 
-li{float: left;
+ul, li{float: left;
 	text-decoration: none;
 	color: #777777;
 	background-color: #FFFFFF;
-	display: inline;
+	display: inline-block;
 }
 
 
-h1,h2,h3,h4{font-family: 'Georgia', Times, 'Times New Roman', serif;
+h1,h2,h3{font-family: 'Georgia', Times, 'Times New Roman', serif;
 }
 
 
@@ -49,9 +45,6 @@ h2{color: #4aaaa5;
 
 h3{color:#4aaaa5;
 	border-bottom: 1px solid #777777;
-}
-
-header li{display: inline;
 }
 
 
@@ -108,7 +101,6 @@ aside{float: left;
 		margin-left: 40px;
 		margin-right: 20px;
 		margin-top: 20px;
-		margin-bottom: 20px;
 }
 
 
